skincare-routine-front-end/src/index.css
/* STYLING THAT WILL APPLY TO ALL THE PAGES */
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap");

body {
  font-family: "Montserrat", sans-serif;
  background-color: #80ced7;
  color: #ffffff;
}

/* the heading of each page outside of landing */
.page-header {
  text-align: center;
  font-size: 26px;
}

/* styling for header component */
h1 {
  font-weight: 800;
}

/* styling for main component */
main {
  background-color: #ffffff;
  color: #003249;
}

/* styling for footer component */
.trademark,
.credit {
  font-style: italic;
}

.linkedIn-link {
  color: #ffffff;
  text-decoration: none;
}

.linkedIn-link:hover {
  color: #003249;
  transition: all 0.5s;
}

/* LANDING STYLING */
.landing-main {
  display: flex;
}

img {
  max-width: 95%;
}

.log-in-create-account {
  display: flex;
  flex-direction: column;
}

#log-in-button {
  font-family: "Montserrat", sans-serif;
  background-color: #80ced7;
  border: 1px solid #80ced7;
  color: #ffffff;
  border-radius: 5px;
  width: 100px;
  height: 25px;
}

#log-in-button:hover {
  background-color: #ffffff;
  color: #80ced7;
  cursor: pointer;
  transition: all 0.5s;
}

.new-user {
  color: #003249;
  text-decoration: none;
}

.new-user:hover {
  color: #80ced7;
  transition: all 0.5s;
}

/* NEW FORM STYLING */
#new-form {
  display: flex;
  flex-direction: column;
}

